--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "setup-advancedinstaller",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "private": true,
   "description": "Setup ReSharper Command Line Tools in GitHub Action",
   "main": "src/index.ts",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "build": "tsc && ncc build"
   },
@@ -20,16 +23,16 @@
   "author": "Jozef Izso",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.6.0",
-    "@actions/exec": "^1.1.0",
-    "@actions/io": "^1.1.1",
-    "@actions/tool-cache": "^1.7.1",
-    "uuid": "^8.3.2"
+    "@actions/core": "^1.11.1",
+    "@actions/exec": "^1.1.1",
+    "@actions/io": "^1.1.3",
+    "@actions/tool-cache": "^2.0.2",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@types/node": "^12.20.37",
-    "@types/uuid": "^8.3.3",
-    "@vercel/ncc": "^0.33.0",
-    "typescript": "^4.5.2"
+    "@types/node": "^24.7.0",
+    "@types/uuid": "^11.0.0",
+    "@vercel/ncc": "^0.38.4",
+    "typescript": "^5.9.3"
   }
 }
